# Auto_Frac

./: .gitignore  .gitmodules  AutoFrac.pro  CMakeLists.txt  README.md  edge.cpp  edge.h  result.py  result_poly.py  set.cpp  set.h
include/: edge.h  face.h  fileprinter.h  mainwindow.h  structure.h  structureprinter.h  uniquevector.h  utils.h
include/areaperimeter/: areaperimeter.h
include/computations/: computation.h  densitycomputation.h
include/density/: density.h
include/fractal/: edge.h  face.h  structure.h  structure3d.h  structure3dprinter.h  structureprinter.h  volume.h
include/fractaldimension/: fractaldimension.h
include/graph/: incidencegraph.h  vertex.h
include/gui/: areaperimeterwindow.h  autosub2dwindow.h  autosub3dwindow.h  batchcircle.h  batchcircledual.h  batchdebugline.h  batchedge.h  batchface.h  batchgraphicsitem.h  batchplane.h  batchskybox.h  batchsphere.h  batchvertex.h  camera.h  circle.h  controlpointeditor.h  debugline.h  densitywindow.h  fractaldimensionwindow.h  glview.h  mainwindow.h  model.h  persistenthomologywindow.h  pickingtype.h  pointgraphicsitem.h  polytopal2dwindow.h  schemeeditor.h  schemewindow.h  shaders.h  skybox.h  sphere.h  vertexgraphicsitem.h
include/halfedge/: algorithm.h  face.h  graphisomorphism.h  halfedge.h  mesh.h  objreader.h  objwriter.h  point3d.h  vertex.h
include/persistenthomology/: persistenthomology.h
include/polytopal/: circle.h  edge.h  face.h  halfedge.h  inversivecoordinates.h  mesh.h  polytopal.h  structure.h  structureprinter.h  vertex.h
include/utils/: fileprinter.h  fractaldimension.h  measures.h  objreader.h  point2d.h  set.h  uniquevector.h  utils.h
json/: assembly_g2.json  frac_signal.json  g2.json  i3.json  struct.json
off/papillon_R/: iter0.off  iter1.off  iter2.off  iter3.off  iter4.off  iter5.off
output/: frac_cube.py  frac_dodecaedre.py  penta_different_algo.py  result (autre copie).py  result (copie).py  result.py  result_g3.py  result_poly.py  result_poly_matrices.py  result_poly_matrices_square.py  result_struct_delay.py  result_temp.py  struct_poly.py  struct_poly_s.py  struct_poly_save.py  struct_poly_save_deform.py  struct_poly_save_sin.py  temp3D.py
output/characteristic_cells/: G2.py  hepta_C2_classic.py  penta_B2_classic.py  penta_C2_corner.py  square_B2_corner.py  square_B3_corner.py
polytopal_results/: cube.py  dodecahedron.py  double_tetra.py  octahedron.py  pyramid_penta.py  pyramid_square.py  tetrahedron.py  unnamed.py
shaders/circles/: fs.glsl  gs.glsl  tcs.glsl  tes.glsl  vs.glsl
shaders/circlesdual/: fs.glsl  gs.glsl  vs.glsl
shaders/cubemap/: vs.glsl
shaders/debugline/: fs.glsl  gs.glsl  vs.glsl
src/: edge.cpp  face.cpp  fileprinter.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  structure.cpp  structureprinter.cpp
(+137 files in other folders)
